Started to create User entity.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/security
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=none
 
 #---------------- Show sql properties
 #spring.jpa.show-sql=true
