Started develop crud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/security
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #---------------- Show sql properties
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+#---------------- rsa files
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
